--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ ul {
     transform: unset;
   }
   .nav-message {
-    padding-left: 0px;
+    padding-left: 0;
     text-align: center;
   }
   .nav-menu-icon {
@@ -358,6 +358,16 @@ ul {
   z-index: 3;
 }
 
+.cover-byline .post-body a strong,
+.cover-byline a,
+.post-body a .cover-byline strong {
+  color: hsla(0, 0%, 100%, 0.6);
+}
+
+.timeago {
+  display: inline;
+}
+
 h5 {
   font-family: Shentox, sans-serif;
   font-weight: 500;
@@ -409,7 +419,6 @@ article:first-child h2 {
 }
 
 .cover-byline li .icon {
-  -webkit-transform: scale(0.875);
   transform: scale(0.875);
   float: left;
   margin-right: 4px;
@@ -468,7 +477,6 @@ article:first-child h2 {
 
 @media (min-width: 768px) {
   .u-col-m-4 {
-    -ms-flex-preferred-size: 33.33333333%;
     flex-basis: 33.33333333%;
     max-width: 33.33333333%;
   }
@@ -488,7 +496,6 @@ article:first-child h2 {
 }
 
 .u-col-xs-12 {
-  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   max-width: 100%;
 }
@@ -516,7 +523,7 @@ ul {
 
 .latest {
   margin-bottom: 2em;
-  padding-top: 24px;
+  padding-top: 64px;
 }
 
 .ltNws {
@@ -527,7 +534,6 @@ ul {
   color: #f42;
   text-decoration: none;
   font-family: Avalon, sans-serif;
-  font-size: 32px;
   letter-spacing: -0.015em;
   margin: 0;
   padding: 0;
@@ -560,7 +566,8 @@ ul {
 
 @media (max-width: 1024px) {
   .cover-logo,
-  .cover-gradient {
+  .cover-gradient,
+  .cover-date {
     display: none;
   }
   .cover {
@@ -571,9 +578,6 @@ ul {
   }
   article:first-child h2 {
     font-size: 40px;
-  }
-  .cover-date {
-    display: none;
   }
 }
 
@@ -631,15 +635,8 @@ ul {
 }
 
 .u-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 1 auto;
   flex: 0 1 auto;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
   margin: -8px;
 }
@@ -667,10 +664,8 @@ ul {
 }
 
 .lazy {
-  -webkit-transition: 0.4s ease;
   transition: 0.4s ease;
   opacity: 0;
-  will-change: opacity;
 }
 
 .post-body a strong,
@@ -687,7 +682,6 @@ a {
 
 .deals-header {
   overflow: hidden;
-  *zoom: 1;
   margin-bottom: 24px;
 }
 
@@ -703,12 +697,6 @@ h3 {
   color: #f42;
   font-weight: 700;
   line-height: 1.1;
-}
-
-.deals-header-more {
-  float: right;
-  line-height: 18px;
-  margin-top: 11px;
 }
 
 .distraction-title,
@@ -779,7 +767,6 @@ h2 {
 
 @media (min-width: 768px) {
   .u-col-m-4 {
-    -ms-flex-preferred-size: 33.33333333%;
     flex-basis: 33.33333333%;
     max-width: 33.33333333%;
   }
@@ -787,7 +774,6 @@ h2 {
 
 @media (min-width: 1024px) {
   .u-col-l-3 {
-    -ms-flex-preferred-size: 25%;
     flex-basis: 25%;
     max-width: 25%;
   }
@@ -796,6 +782,12 @@ h2 {
 @media (min-width: 768px) {
   .deals {
     margin-bottom: 3em;
+  }
+}
+
+@media (min-width: 1024px) {
+  .deals {
+    margin-bottom: 4em;
   }
 }
 
@@ -839,13 +831,7 @@ h2 {
 }
 
 @media (min-width: 768px) {
-  .u-row {
-    margin: -10px;
-  }
-}
-@media (min-width: 768px) {
   .vertical {
-    *zoom: 1;
     padding: 10px;
   }
 }
@@ -883,14 +869,14 @@ h2 {
   opacity: 0.9;
 }
 
-.story--investment .story-byline {
-  margin-top: 0;
-}
-
 .vertical .story-byline {
   border-top: 1px solid rgba(255, 68, 34, 0.25);
   margin-top: 10px;
   padding-top: 10px;
+}
+
+.story--investment .story-byline {
+  margin-top: 0;
 }
 
 .story-addPadding {
@@ -908,6 +894,31 @@ h2 {
   margin-right: 23px;
 }
 
+.deals-header-more:after {
+  content: '|';
+  margin-left: 10px;
+  margin-right: 10px;
+  display: none;
+  pointer-events: none;
+  position: absolute;
+}
+
+.deals-header-more:not(:first-of-type):after {
+  display: inline-block;
+}
+
+@media (max-width: 1024px) {
+  .deals.deals--long .deals-header .deals-header-more:after {
+    display: none;
+  }
+}
+
+@media (max-width: 1024px) {
+  .deals.deals--long .deals-header .deals-header-more:not(:last-of-type):after {
+    display: inline-block;
+  }
+}
+
 @media (min-width: 768px) {
   .deals-header-more {
     font-size: 16px;
@@ -917,7 +928,6 @@ h2 {
 
 @media (min-width: 768px) {
   .u-col-m-6 {
-    -ms-flex-preferred-size: 50%;
     flex-basis: 50%;
     max-width: 50%;
   }
@@ -925,7 +935,6 @@ h2 {
 
 @media (min-width: 1024px) {
   .u-col-l-4 {
-    -ms-flex-preferred-size: 33.33333333%;
     flex-basis: 33.33333333%;
     max-width: 33.33333333%;
   }
@@ -977,8 +986,8 @@ h2 {
 }
 
 .section-popular-title {
-  margin: 0;
   padding: 0;
+  margin-bottom: 6px;
 }
 
 .section-popular-title a {
@@ -1049,20 +1058,13 @@ li {
 }
 
 .section-latest {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
   background-color: rgba(255, 68, 34, 0.06);
   margin: 2px 0;
 }
 
 .section-latest-header {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
   overflow: hidden;
   padding: 10px 14px 0;
@@ -1083,8 +1085,6 @@ li {
 }
 
 .section-latest-image {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 96px;
   flex: 0 0 96px;
   background-color: #000;
   background-position: 50%;
@@ -1126,10 +1126,6 @@ li {
 
 .sections {
   margin-bottom: 40px;
-}
-
-.deals-header {
-  margin-bottom: 24px;
 }
 
 .distraction-title,
@@ -1182,7 +1178,6 @@ h3 {
 }
 
 .story--deal .story-dealDiscount div {
-  -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
   font-size: 14px;
   font-weight: 700;
@@ -1214,7 +1209,6 @@ h3 {
 
 .story--deal .story-dealPrice {
   overflow: hidden;
-  *zoom: 1;
   color: #aaa;
   font-size: 12px;
   line-height: 18px;
@@ -1256,4 +1250,139 @@ h3 {
     padding-left: 88px;
     position: relative;
   }
+}
+
+.footer {
+  text-align: center;
+  position: relative;
+  z-index: 4;
+}
+
+.footer-links {
+  background: #131313;
+  padding: 2.5em 0;
+}
+
+@media (min-width: 768px) {
+  .footer-links {
+    padding: 3em 0 2em;
+  }
+}
+
+.footer-links-social {
+  margin-bottom: 1.5em;
+}
+
+.footer-links-social li {
+  display: inline-block;
+  margin: 0 3px;
+}
+
+@media (min-width: 768px) {
+  .footer-links-social li {
+    margin: 0 8px;
+  }
+}
+
+.footer-links-social li .post-body a strong,
+.footer-links-social li a,
+.post-body a .footer-links-social li strong {
+  background: #333;
+  border-radius: 50%;
+  display: block;
+  height: 40px;
+  padding: 12px;
+  text-align: center;
+  width: 40px;
+}
+
+.footer-links-social li a .icon,
+.post-body a .footer-links-social li strong .icon {
+  height: 16px;
+  width: 16px;
+}
+
+.icon--facebook--light {
+  background-position: -272px -272px;
+}
+
+.icon--twitter--light {
+  background-position: -1024px -1024px;
+}
+
+.icon--youtube--light {
+  background-position: -1280px -1280px;
+}
+
+.icon--instagram--light {
+  background-position: -416px -416px;
+}
+
+.icon--pinterest--light {
+  background-position: -672px -672px;
+}
+
+.icon--rss--light {
+  background-position: -816px -816px;
+}
+
+.icon--mail--light {
+  background-position: -576px -576px;
+}
+
+.footer-links-menu li {
+  font-family: Shentox, sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 13px;
+  line-height: 24px;
+  margin: 0 4px;
+}
+
+@media (min-width: 768px) {
+  .footer-links-menu li {
+    margin: 0 6px;
+  }
+}
+
+.footer-links-menu li .post-body a strong,
+.footer-links-menu li a,
+.post-body a .footer-links-menu li strong {
+  color: #aaa;
+}
+
+.footer-legal {
+  background: #000;
+  color: #aaa;
+  font-size: 13px;
+  padding: 2.5em 0;
+}
+
+@media (min-width: 768px) {
+  .footer-legal {
+    padding: 3em 0;
+  }
+}
+
+.footer-legal span {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .footer-legal span {
+    display: inline;
+  }
+}
+
+.footer-legal-logoStackPath,
+.footer-legal-logoTNW {
+  display: inline-block;
+  height: 9px;
+  margin-right: 1px;
+  vertical-align: baseline;
+}
+
+.footer-legal span b {
+  color: #f42;
 }
